[package]
name    = "cosmos-sdk-historical-query"
version = "0.0.0"
edition = "2021"
authors = ["Larry Lyu <gm@larry.engineer>"]

[dependencies]
anyhow           = "1"
cosmos-sdk-proto = "0.20"
hex              = "0.4"
prost            = "0.12"
serde_json       = "1"
tendermint       = "0.34"
tendermint-rpc   = { version = "0.34", features = ["http-client"] }
tokio            = { version = "1", features = ["full"] }
